[package]
name = "turbomcp-transport-ws"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 WebSocket transport."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"

[dependencies]
turbomcp-core = { workspace = true, features = ["std"] }
turbomcp-codec = { workspace = true }
turbomcp-service = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true, features = ["rt", "net"] }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-util"] }
serde_json = { workspace = true }
